# binwalk

./: Cargo.toml  README.wasm.md
src/: binwalk.rs  common.rs  display.rs  entropy.rs  lib.rs  magic.rs  main.rs
src/extractors/: common.rs  encfw.rs  mh01.rs
src/signatures/: squashfs.rs  uimage.rs  xz.rs
src/structures/: common.rs  linux.rs  lzfse.rs  lzma.rs
