[package]
name = "binwalk"
version = "3.1.1"
edition = "2024"
authors = ["Craig Heffner <heffnercj@gmail.com>"]
license = "MIT"
readme = "CARGO_README.md"
repository = "https://github.com/ReFirmLabs/binwalk"
description = "Analyzes data for embedded file types"
keywords = ["binwalk", "firmware", "analysis"]

[dependencies]
log = "0.4.22"
base64 = "0.22.1"
chrono = "0.4.38"
entropy = "0.4.2"
colored = "3.0.0"
crc32-v2 = "0.0.5"
crc32c = "0.6.8"
liblzma = "0.4.2"
bzip2 = "0.6.0"
serde_json = "1.0"
env_logger = "0.11.5"
flate2 = "1.1.2"
adler32 = "1.2.0"
md5 = "0.8.0"
miniz_oxide = "0.8.0"
aho-corasick = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.16", features = ["derive"] }
xxhash-rust = { version = "0.8.12", features = ["xxh32"] }
hex = "0.4.3"
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termsize = "0.1"
walkdir = "2.5.0"
threadpool = "1.8.1"
delink = { git = "https://github.com/devttys0/delink" }
plotly = { version = "0.13.1", features = ["kaleido", "kaleido_download"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
plotly = { version = "0.13.1" }
uuid = { version = "1.17.0", features = ["js"] }

[profile.release]
lto = true
